--- a/src/App.css
+++ b/src/App.css
@@ -144,7 +144,7 @@ body {
 
 .custom-background {
   position: relative;
-  background-image: url('https://imgur.com/dFfymnn.png');
+  background-image: url('https://imgur.com/cCwasqW.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
